# queue-manager

./: .gitignore  Main.java  Makefile  README.md  client.py  client_2.py  docker-compose.server.yml  docker-compose.yml  example_ta.py  example_ts.py  example_tv.py  make.py  makefile  pyproject.toml  requirements.txt  run.py  runclient.py  runclient_ta.py  runclient_ts.py  runclient_tv.py  server.py  utils.py
ClientTS/: RunClient.java
ClientTS/implementations/: Client.java
ClientTS/managers/: MessageManager.java
client/: __init__.py  contracts.py  defaults.py
client/implementations/: app.py  client.py
client/managers/: event_manager.py
client/screens/: home.py  show_password.py
client_ta/: app.py  client.py
client_ts/: app.py
client_tv/: app.py  client.py
devops/: Dockerfile  client.Dockerfile  example_ta.py  example_ts.py  example_tv.py
server/: __init__.py  defaults.py  exceptions.py
server/implementations/: queue.py  server.py  tsta_connection.py  tv_connection.py
server/implementations/tests/: test_queue.py  test_server.py  test_tsta_connection.py  test_tv_connection.py
server/managers/: client_manager.py  message_manager.py  queue_manager.py  server_manager.py
server/managers/tests/: test_client_manager.py  test_message_manager.py  test_queue_manager.py
server/screen/: home.py
server/screens/: Start.py  Stop.py  home.py
server/shared/: __init__.py  action.py  connection.py  runner.py
shared/: app.py  contracts.py  socket.py
shared/widgets/: button.py  label.py  screen.py
tests/: test_message_manager.py  test_queue_manager.py
(+9 files in other folders)
