[tool.poetry]
name = "queue-manager"
version = "0.1.0"
description = "Gerenciador de filas e senhas"
authors = ["Your Name <you@example.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
